--- a/Products.Entity/Products.Entity.csproj
+++ b/Products.Entity/Products.Entity.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sample.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Products.Exceptions\Products.Exceptions.csproj">
