New File Added by User Pankaj

--- a/WPFProductUI/WPFProductUI.csproj
+++ b/WPFProductUI/WPFProductUI.csproj
@@ -109,5 +109,8 @@
       <Name>Products.Exceptions</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="SampleDemo.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
